syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "ChurchLife.Server.grpc";
option go_package = "github.com/fegmm/ChurchLife-Communicator/events";

package event;

service EventService {
  rpc CreateEvent (Event) returns (Event);
  rpc React (Reaction) returns (ReactResponse);
  rpc GetEvents (GetEventsRequest) returns (stream Event);
}

message GetEventsRequest {
	google.protobuf.Timestamp events_since = 1;
}

message ReactResponse {

}

message Event {
	string id = 1;
	google.protobuf.Timestamp creation_timestamp = 2;
	string title = 3;
	string description = 4;
	string location = 5;
	google.protobuf.Timestamp start = 6;
	google.protobuf.Timestamp end = 7;
	google.protobuf.Int32Value max_participants = 8;
	google.protobuf.Int32Value min_participants = 9;
	string url = 10;
	string image_url = 11;
}

message Reaction {
	string id = 1;
	string eventId = 2;
	string emoji = 3;
	Channel channel = 4;
	string user_identifier = 5;
	string user_display_name = 6;
	google.protobuf.Timestamp timestamp = 7;
	bool remove = 8;
}

enum Channel {
	MAIL = 0;
	WHATSAPP = 1;
	TELEGRAM = 2;
	SIGNAL = 3;
}

